# asgi-user-agents

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: cd.yml  check-pr-title.yml  ci.yml
docs/superpowers/plans/: 2026-06-08-contrib-integrations.md
docs/superpowers/specs/: 2026-06-08-contrib-integrations-design.md  2026-06-22-django-contrib-design.md
src/asgi_user_agents/: __init__.py  datastructures.py  middleware.py  requests.py  types.py
src/asgi_user_agents/contrib/: __init__.py
src/asgi_user_agents/contrib/django/: __init__.py  apps.py  middleware.py  utils.py
src/asgi_user_agents/contrib/django/templatetags/: __init__.py  asgi_user_agents.py
src/asgi_user_agents/contrib/fastapi/: __init__.py  dependencies.py
src/asgi_user_agents/contrib/litestar/: __init__.py  plugin.py
tests/: test_datastructures.py  test_django_contrib.py  test_fastapi.py  test_fastapi_contrib.py  test_litestar.py  test_litestar_plugin.py  test_quart.py  test_starlette.py
